styles.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.4.12,
* Autoprefixer: v10.4.4
* Browsers: last 4 version
*/

body,
html {
    height: 100%;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
}

/* The hero image */
.hero-image {
    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
    /* background-image: linear-gradient(rgba(0, 0, 0, 0.8),
            rgba(0, 0, 0, 0.7)),
        url("mohammad-rahmani-q1p2DrLBtko-unsplash (1)-min (5).jpg"); */

    /* Set a specific height */
    height: 100%;

    /* Position and center the image to scale nicely on all screens */

    position: relative;
    /* background-attachment: fixed; */
    overflow: hidden;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.hero-image::before {
    content: ' ';
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: white;
    background-image: -webkit-gradient(linear,
            left top, left bottom,
            from(rgba(0, 0, 0, 0.8)),
            to(rgba(0, 0, 0, 0.7))),
        url("mohammad-rahmani-q1p2DrLBtko-unsplash (1)-min (5).jpg");
    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.8),
            rgba(0, 0, 0, 0.7)),
        url("mohammad-rahmani-q1p2DrLBtko-unsplash (1)-min (5).jpg");
    background-image: linear-gradient(rgba(0, 0, 0, 0.8),
            rgba(0, 0, 0, 0.7)),
        url("mohammad-rahmani-q1p2DrLBtko-unsplash (1)-min (5).jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    will-change: transform;
    z-index: -1;
}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
    color: white;
}

.hero-text button {
    height: 2rem;
    width: 8rem;
    border-radius: 10px;
    border-style: solid;
}

.hero-text h1 {
    margin-bottom: 3rem;
    font-size: 4rem;
}

.job-title {
    margin-bottom: 3rem;
    font-size: 2rem;
}

/* Arrow Animation */
.wrap {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-grid-column-align: center;
        justify-self: center;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 3rem;
}

.wrap a {
    -ms-flex-item-align: end;
        align-self: flex-end;
    color: white;
}

.arrow {
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    height: 5vw;
    width: 5vw;
    border-style: solid;
    border-color: white;
    border-width: 0px 3px 3px 0px;
    -webkit-transform: rotate(45deg);
        -ms-transform: rotate(45deg);
            transform: rotate(45deg);
    -webkit-transition: border-width 150ms ease-in-out;
    -o-transition: border-width 150ms ease-in-out;
    transition: border-width 150ms ease-in-out;
    -webkit-animation: MoveUpDown 2s linear infinite;
            animation: MoveUpDown 2s linear infinite;
    position: relative;
    cursor: pointer;
}

@-webkit-keyframes MoveUpDown {

    0%,
    100% {
        bottom: 0
    }

    50% {
        bottom: 10px;
    }
}

@keyframes MoveUpDown {

    0%,
    100% {
        bottom: 0
    }

    50% {
        bottom: 10px;
    }
}

.arrow:hover {
    border-bottom-width: 4px;
    border-right-width: 4px;
}

.project-arrow {
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    height: 5vw;
    width: 5vw;
    border-style: solid;
    border-color: white;
    border-width: 0px 1px 1px 0px;
    -webkit-transform: rotate(45deg);
        -ms-transform: rotate(45deg);
            transform: rotate(45deg);
    -webkit-transition: border-width 150ms ease-in-out;
    -o-transition: border-width 150ms ease-in-out;
    transition: border-width 150ms ease-in-out;
    -webkit-animation: MoveUpDown 2s linear infinite;
            animation: MoveUpDown 2s linear infinite;
    position: relative;
    cursor: pointer;
}

.project-arrow:hover {
    border-bottom-width: 4px;
    border-right-width: 4px;
}

.project-arrow-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    /* background-color: #0e242d; */
    height: 5vh;
    margin-bottom: 3rem;
}

.content {
    /* height: 100%; */
    min-height: 100%;
    font-size: 36px;
    background-image: -webkit-gradient(linear,
            left top, left bottom,
            from(rgba(0, 0, 0, 0.5)),
            to(rgba(0, 0, 0, 0.5))),
        url("marcel-strauss-lRIMRLE9SOk-unsplash-min.jpg");
    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.5),
            rgba(0, 0, 0, 0.5)),
        url("marcel-strauss-lRIMRLE9SOk-unsplash-min.jpg");
    background-image: linear-gradient(rgba(0, 0, 0, 0.5),
            rgba(0, 0, 0, 0.5)),
        url("marcel-strauss-lRIMRLE9SOk-unsplash-min.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    color: lightgray;
}

.content .about-me {
    margin: 50px 50px 40px 50px;
    padding-top: 20px;
    max-width: 600px;
}

.content .about-me p {
    font-size: 14pt;
    /* text-align: justify; */
}

.content .about-me h3 {
    font-family: 'Playfair Display', serif;
}

.content .custom-footer {
    position: relative;
    left: 0;
    bottom: 0;
    width: 100%;
    /* background-color: red; */
    /* color: white; */
    text-align: center;
    font-size: 2.5rem;
    /* visibility: hidden; */
    margin-top: 8%;
}

.custom-footer{
    max-width: 500px;
}

/* .card {
    box-shadow: 0 14px 18px 0 rgba(131, 130, 130, 0.2);
    transition: 0.3s;
    width: 100%;
    height: 50vh;
    background-color: black;
    color: white;
    border-radius: 5px;
    font-size: 0.6em;
    opacity: 0.6;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.card:hover {
    box-shadow: 10px 18px 16px 0 rgba(255, 255, 255, 0.2);
} */

.card p {
    margin-top: 0;
    font-weight: bolder;
    /* text-decoration: underline; */
    text-align: center;
}

.card {
    -webkit-box-shadow: 0 14px 18px 0 rgba(131, 130, 130, 0.2);
            box-shadow: 0 14px 18px 0 rgba(131, 130, 130, 0.2);
    /* transition: 0.3s; */
    width: 100%;
    height: 50vh;
    /* background-color: black; */
    background: transparent;
    color: white;
    border-radius: 5px;
    /* font-size: 0.6em; */
    opacity: 0.6;
    -webkit-backface-visibility: hidden; 
    backface-visibility: hidden;
}

.content {
    position: absolute;
    width: 100%;
    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    -webkit-transition: 1.5s;
    -webkit-transition: -webkit-transform 1.5s;
    transition: -webkit-transform 1.5s;
    -o-transition: transform 1.5s;
    transition: transform 1.5s;
    transition: transform 1.5s, -webkit-transform 1.5s;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    font-size: 1em;
}

.card:hover .content {
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg);
    -webkit-transition: 1.5s;
    -webkit-transition: -webkit-transform 1.5s;
    transition: -webkit-transform 1.5s;
    -o-transition: transform 1.5s;
    transition: transform 1.5s;
    transition: transform 1.5s, -webkit-transform 1.5s;
}

.front,
.back {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: space-evenly;
        -ms-flex-pack: space-evenly;
            justify-content: space-evenly;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    position: absolute;
    height: 100%;
    width: 100%;
}

.back {
    background: #05151f;
    color: white;
    /* background: transparent; */
    -webkit-transform: rotateY(-180deg);
    transform: rotateY(-180deg);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.card-image{
    width: 60%;
}

.card-description{
    font-size: 80%; 
    margin-left: 10px;

}

.technology-container{
    white-space: nowrap;
}

/* @media screen and (max-width: 800px) {
    .card {
        margin: 10px;
        width: 40vh;
    }

}

@media screen and (min-height: 1085px) {
    .card {
        margin: 10px;
        width: 40vh;
    }

    .card-description{
        font-size: 1.3em;
    }

    .content h5{
        font-size: 1.5em;
        font-weight: bolder;
    }
} */

hr {
    width: 25rem;
}

@media screen and (max-width: 475px) {

    /* .card {
        width: 5vh;
    } */
    .content .about-me {
        font-size: 50%;
        margin: 5;
    }
}

a.icon-block {
    display: inline-block;
    width: 7rem;
    text-align: center;
    text-decoration: none;
    color: inherit;
}

a.icon-block i,
a.icon-block span {
    display: block;
    clear: both;
}

